# Crime-Nexus

Back-end/: evaluation_results.json  main.py  pyproject.toml  requirements.txt
Back-end/chroma_db/: chroma.sqlite3
Back-end/config/: settings.py
Back-end/core/: User_profiling.py  anomaly_detector.py  ingestion.py  models.py  rag_pipeline.py  timeline_extractor.py
Back-end/data/: forensics.db
Back-end/data/uploads/case_0de6076f/extracted/extracted/: detectivereport1.pdf.txt  detectivereport2.pdf.txt  detectivereport3.pdf.txt  detectivereport4.pdf.txt  m57-affidavit-warrant-final.pdf.txt
Back-end/data/uploads/case_393f777e/extracted/: detectivereport1.doc
Back-end/data/uploads/case_b5d4e90e/extracted/: detectivereport2.doc
Back-end/evaluation/: rag_metrics.py
Back-end/utils/: file_processing.py  session_handler.py
front-end/: index.html  package-lock.json  package.json
front-end/src/: App.css  App.jsx  index.css
front-end/src/components/layout/: Sidebar.jsx
front-end/src/components/tabs/: ChatTab.jsx  EvidenceTab.jsx  PeopleTab.jsx  RawEvidenceTab.jsx  TimelineTab.jsx
front-end/src/components/ui/: AnomalyBadge.jsx  GlobalStyles.jsx  NotesSidebar.jsx  RelevanceBar.jsx  SidebarItem.jsx  StatCard.jsx
front-end/src/components/views/: AuthView.jsx  DashboardView.jsx  HeroView.jsx  LandingView.jsx  ProcessingView.jsx  UploadView.jsx
front-end/src/data/: mockData.js
front-end/src/lib/: supabase.js
front-end/src/utils/: api.js
